<resources>
    <string name="app_name">My Job</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title">Calcule o valor da \nsua hora de trabalho</string>
    <string name="per_month">Quanto pretende ganhar por mês?</string>
    <string name="hour_per_day">Quantas horas pretende trabalhar por dia?</string>
    <string name="days_per_week">Quanto dias pretende trabalhar por semana?</string>
    <string name="vacation">Quantas semanas pretende tirar de férias?</string>

    <string name="btn_continue">Continuar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>