<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.home.HomeFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:gravity="center_horizontal"
            android:text="@string/title"
            android:textColor="@color/green_dark"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_per_month"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_g"
            android:hint="@string/per_month"
            app:shapeAppearance="@style/EditText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_input_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_per_day"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_g"
            android:hint="@string/hour_per_day"
            app:shapeAppearance="@style/EditText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_input_per_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_per_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_g"
            android:text="@string/days_per_week"
            android:textColor="@color/green_dark"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_g"
            android:layout_marginTop="@dimen/dimen_g"
            android:layout_marginEnd="@dimen/dimen_g"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/date_01"
                style="@style/Date.Radius"
                android:text="01" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/date_02"
                style="@style/Date.Radius"
                android:text="02" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/date_03"
                style="@style/Date.Radius"
                android:text="03" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/date_04"
                style="@style/Date.Radius"
                android:text="04" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/date_05"
                style="@style/Date.Radius"
                android:text="05" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/date_06"
                style="@style/Date.Radius"
                android:text="06" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/date_07"
                style="@style/Date.Radius"
                android:text="07" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_vacation"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_g"
            android:hint="@string/vacation"
            app:shapeAppearance="@style/EditText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_vacation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_g"
            android:background="@color/green_light"
            android:text="@string/btn_continue"
            android:textColor="@color/white" />

    </LinearLayout>

</FrameLayout>